[package]
name = "proc-maps"
version = "0.5.0"
authors = ["Julia Evans <julia@jvns.ca>", "Ben Frederickson <github@benfrederickson.com>", "Adam Jensen <adam@acj.sh>"]
description = "Helper crate for getting virtual memory maps from processes"
license = "MIT"
homepage = "https://github.com/rbspy/proc-maps"
repository = "https://github.com/rbspy/proc-maps"
edition="2021"

[dependencies]
libc = "0.2.186"

[target.'cfg(target_os="macos")'.dependencies]
anyhow = "1.0.103"
mach2 = "0.6.0"
libproc = "0.14.11"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["tlhelp32", "processthreadsapi", "handleapi", "impl-default", "dbghelp", "memoryapi", "sysinfoapi"]}

[target.'cfg(target_os="freebsd")'.build-dependencies]
bindgen = { version = "0.72.1", optional = true }

[features]
default = ["generate-bindings"]
generate-bindings = ["bindgen"]
